Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -498,6 +498,37 @@
     ]
   },
   {
+    "title": "'Sát thủ' thầm lặng khiến nam giới mất cơ hội làm bố",
+    "content": "Giãn tĩnh mạch thừng tinh là một trong những nguyên nhân chính gây vô sinh ở nam giới, ảnh hưởng đến khoảng 15% nam giới trưởng thành. Tình trạng này thường không có triệu chứng rõ ràng, khiến nhiều người chỉ phát hiện khi kiểm tra sức khỏe sinh sản. Nó gây ra sự tăng nhiệt độ tại tinh hoàn và rối loạn nội tiết, làm giảm chất lượng và số lượng tinh trùng. Việc điều trị có thể bao gồm phẫu thuật hoặc các phương pháp ít xâm lấn để cải thiện lưu thông máu.",
+    "link": "https://vnexpress.net/sat-thu-tham-lang-khien-nam-gioi-mat-co-hoi-lam-bo-4858248.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Giãn tĩnh mạch thừng tinh có thể gây ra vấn đề gì cho nam giới?",
+    "answers": [
+      {
+        "text": "Vô sinh",
+        "correct": true
+      },
+      {
+        "text": "Tăng huyết áp",
+        "correct": false
+      },
+      {
+        "text": "Đau đầu",
+        "correct": false
+      },
+      {
+        "text": "Mất ngủ",
+        "correct": false
+      },
+      {
+        "text": "Béo phì",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "2 đứa trẻ xuất hiện trong \"cuộc phỏng vấn thảm họa\" giờ ra sao?",
     "content": "Bài viết cập nhật về gia đình ông Robert E. Kelly, người nổi tiếng với \"cuộc phỏng vấn thảm họa\" năm 2017, trong đó hai con nhỏ của ông bất ngờ xuất hiện gây ra cảnh hỗn loạn. Sau 8 năm, con gái ông, Marion, hiện đã 12 tuổi, và con trai, James, sắp tròn 9 tuổi. Ông Kelly bày tỏ sự biết ơn vì công chúng đã nhìn nhận sự cố một cách hài hước và chân thực, giúp gia đình ông gắn bó hơn. Ông cũng nhấn mạnh tầm quan trọng của sự hài hước trong cuộc sống gia đình, đặc biệt là với những bậc phụ huynh nuôi con nhỏ.",
     "link": "https://dantri.com.vn/giao-duc/2-dua-tre-xuat-hien-trong-cuoc-phong-van-tham-hoa-gio-ra-sao-20250314091621739.htm",
@@ -1796,33 +1827,6 @@
     ]
   },
   {
-    "title": "Bí quyết giúp con giỏi tiếng Anh",
-    "content": "Bài viết nhấn mạnh tầm quan trọng của việc học tiếng Anh trong thời đại ngày nay, khi mà việc thành thạo ngôn ngữ này đã trở thành điều thiết yếu cho trẻ em Việt Nam. Phụ huynh cần tạo ra môi trường học tập 100% tiếng Anh và khuyến khích trẻ giao tiếp hàng ngày để phát triển phản xạ ngôn ngữ tự nhiên. Đồng thời, phương pháp học tập chủ động như Discovery Learning cũng được khuyến khích để giúp trẻ phát triển kỹ năng sống và khả năng giao tiếp tự tin trong tương lai.",
-    "link": "https://dantri.com.vn/giao-duc/bi-quyet-giup-con-gioi-tieng-anh-20250314162050005.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Làm thế nào để giúp trẻ em giỏi tiếng Anh?",
-    "answers": [
-      {
-        "text": "Tạo môi trường học tập 100% tiếng Anh",
-        "correct": true
-      },
-      {
-        "text": "Chỉ dạy lý thuyết mà không thực hành",
-        "correct": false
-      },
-      {
-        "text": "Không khuyến khích trẻ giao tiếp",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cho trẻ xem phim tiếng Việt",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Có thể nhận biết thủy đậu trong giai đoạn ủ bệnh không?",
     "content": "Trong giai đoạn ủ bệnh của thủy đậu, từ 10-21 ngày sau khi nhiễm virus, người bệnh không có triệu chứng rõ ràng nào để nhận biết. Thời gian lây nhiễm bắt đầu từ 1-2 ngày trước khi phát ban xuất hiện. Để phòng bệnh, tiêm vaccine là biện pháp hiệu quả nhất, và có ba loại vaccine thủy đậu hiện có tại Việt Nam. Người bệnh cần chăm sóc đúng cách và theo dõi các dấu hiệu để tránh biến chứng.",
     "link": "https://vnexpress.net/co-the-nhan-biet-thuy-dau-trong-giai-doan-u-benh-khong-4861443.html",
@@ -1876,6 +1880,33 @@
       },
       {
         "text": "Giảm tỉ lệ CASA xuống dưới 30%.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bí quyết giúp con giỏi tiếng Anh",
+    "content": "Bài viết nhấn mạnh tầm quan trọng của việc học tiếng Anh trong thời đại ngày nay, khi mà việc thành thạo ngôn ngữ này đã trở thành điều thiết yếu cho trẻ em Việt Nam. Phụ huynh cần tạo ra môi trường học tập 100% tiếng Anh và khuyến khích trẻ giao tiếp hàng ngày để phát triển phản xạ ngôn ngữ tự nhiên. Đồng thời, phương pháp học tập chủ động như Discovery Learning cũng được khuyến khích để giúp trẻ phát triển kỹ năng sống và khả năng giao tiếp tự tin trong tương lai.",
+    "link": "https://dantri.com.vn/giao-duc/bi-quyet-giup-con-gioi-tieng-anh-20250314162050005.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Làm thế nào để giúp trẻ em giỏi tiếng Anh?",
+    "answers": [
+      {
+        "text": "Tạo môi trường học tập 100% tiếng Anh",
+        "correct": true
+      },
+      {
+        "text": "Chỉ dạy lý thuyết mà không thực hành",
+        "correct": false
+      },
+      {
+        "text": "Không khuyến khích trẻ giao tiếp",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cho trẻ xem phim tiếng Việt",
         "correct": false
       }
     ]
@@ -2032,6 +2063,33 @@
     ]
   },
   {
+    "title": "Vô sinh sau 4 lần nạo hút thai",
+    "content": "Chị Thùy, 36 tuổi, đã trải qua 4 lần nạo hút thai và gặp phải biến chứng dính lòng tử cung, dẫn đến tình trạng vô sinh. Sau khi được phẫu thuật nội soi để điều trị, chị đã có thai được 5 tuần. Các bác sĩ khuyến cáo rằng nạo hút thai có thể làm tăng nguy cơ vô sinh do tổn thương ở tử cung và hệ thống sinh sản. Phụ nữ nên đi khám định kỳ để phát hiện sớm các bất thường liên quan đến sức khỏe sinh sản.",
+    "link": "https://vnexpress.net/vo-sinh-sau-4-lan-nao-hut-thai-4861387.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao chị Thùy lại bị vô sinh?",
+    "answers": [
+      {
+        "text": "Do biến chứng dính lòng tử cung sau nhiều lần nạo hút thai",
+        "correct": true
+      },
+      {
+        "text": "Vì tuổi tác quá lớn",
+        "correct": false
+      },
+      {
+        "text": "Do không chăm sóc sức khỏe",
+        "correct": false
+      },
+      {
+        "text": "Vì không ăn uống đầy đủ",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đồng đội cũ giàu gấp bảy lần Ronaldo",
     "content": "Louis Saha, cựu cầu thủ Man Utd, đã xây dựng một sự nghiệp kinh doanh thành công với công ty AxisStars, giúp gia sản của anh tăng lên 5,6 tỷ USD, gấp bảy lần tài sản của Cristiano Ronaldo, 780 triệu USD. Saha cùng Ronaldo đã thi đấu tại Man Utd từ 2004 đến 2008 và đã giành nhiều danh hiệu. Bên cạnh đó, Saha còn nhấn mạnh tầm quan trọng của việc hỗ trợ các cựu vận động viên trong việc tìm kiếm cơ hội nghề nghiệp sau khi giải nghệ.",
     "link": "https://vnexpress.net/dong-doi-cu-giau-gap-bay-lan-ronaldo-4861379.html",
@@ -2058,33 +2116,6 @@
       },
       {
         "text": "Đầu tư vào bất động sản",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Vô sinh sau 4 lần nạo hút thai",
-    "content": "Chị Thùy, 36 tuổi, đã trải qua 4 lần nạo hút thai và gặp phải biến chứng dính lòng tử cung, dẫn đến tình trạng vô sinh. Sau khi được phẫu thuật nội soi để điều trị, chị đã có thai được 5 tuần. Các bác sĩ khuyến cáo rằng nạo hút thai có thể làm tăng nguy cơ vô sinh do tổn thương ở tử cung và hệ thống sinh sản. Phụ nữ nên đi khám định kỳ để phát hiện sớm các bất thường liên quan đến sức khỏe sinh sản.",
-    "link": "https://vnexpress.net/vo-sinh-sau-4-lan-nao-hut-thai-4861387.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Tại sao chị Thùy lại bị vô sinh?",
-    "answers": [
-      {
-        "text": "Do biến chứng dính lòng tử cung sau nhiều lần nạo hút thai",
-        "correct": true
-      },
-      {
-        "text": "Vì tuổi tác quá lớn",
-        "correct": false
-      },
-      {
-        "text": "Do không chăm sóc sức khỏe",
-        "correct": false
-      },
-      {
-        "text": "Vì không ăn uống đầy đủ",
         "correct": false
       }
     ]
@@ -4442,33 +4473,6 @@
       },
       {
         "text": "Vì giá trị của xe cao",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Giả thông tin 'con trai tử vong' để kêu gọi giúp đỡ",
-    "content": "Một tài khoản mạng xã hội đã đăng tải thông tin sai lệch về việc 'con trai Huỳnh Hữu Đức' đã tử vong khi điều trị tại Bệnh viện Nhi đồng 2, kèm theo số tài khoản để kêu gọi hỗ trợ tài chính. Tuy nhiên, bệnh viện đã xác nhận không có bệnh nhi nào mang tên này và cảnh báo mọi người cần thận trọng trước các thông tin từ thiện không rõ nguồn gốc. Đây không phải là trường hợp đầu tiên, trước đó đã có nhiều tài khoản giả mạo thông tin bệnh nhi để kêu gọi quyên góp.",
-    "link": "https://vnexpress.net/gia-thong-tin-con-trai-tu-vong-de-keu-goi-giup-do-4861129.html",
-    "cat": "phap-luat",
-    "positivity": 2,
-    "importance": 8,
-    "question": "Tại sao thông tin về bé Huỳnh Hữu Đức bị bệnh viện bác bỏ?",
-    "answers": [
-      {
-        "text": "Bệnh viện không tiếp nhận trường hợp nào tên Huỳnh Hữu Đức.",
-        "correct": true
-      },
-      {
-        "text": "Thông tin là đúng và bệnh viện xác nhận.",
-        "correct": false
-      },
-      {
-        "text": "Bệnh viện không có thông tin về bé trai này.",
-        "correct": false
-      },
-      {
-        "text": "Gia đình không liên lạc với bệnh viện.",
         "correct": false
       }
     ]
