Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -175,6 +175,37 @@
     ]
   },
   {
+    "title": "Tân Thủ tướng Canada chỉ trích ý tưởng \"bang 51\" của ông Trump",
+    "content": "Tân Thủ tướng Canada Mark Carney đã lên tiếng chỉ trích ý tưởng của Tổng thống Mỹ Donald Trump về việc biến Canada thành \"bang 51\" của Mỹ, gọi đó là \"điên rồ\". Ông Carney tuyên bố rằng mặc dù có thể làm việc với ông Trump để giải quyết căng thẳng thương mại, nhưng Canada sẽ không chấp nhận việc trở thành một phần của Mỹ. Ông nhấn mạnh rằng Canada sẽ củng cố các liên minh với châu Âu và không có kế hoạch thảo luận với ông Trump ngay lập tức.",
+    "link": "https://dantri.com.vn/the-gioi/tan-thu-tuong-canada-chi-trich-y-tuong-bang-51-cua-ong-trump-20250315081741829.htm",
+    "cat": "thoi-su",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tân Thủ tướng Canada đã chỉ trích điều gì từ Tổng thống Mỹ Donald Trump?",
+    "answers": [
+      {
+        "text": "Ý tưởng biến Canada thành bang 51 của Mỹ",
+        "correct": true
+      },
+      {
+        "text": "Chính sách thương mại của ông Trump",
+        "correct": false
+      },
+      {
+        "text": "Cách giải quyết khủng hoảng tài chính",
+        "correct": false
+      },
+      {
+        "text": "Chương trình nghị sự của Chính phủ Mỹ",
+        "correct": false
+      },
+      {
+        "text": "Sự hợp tác giữa Canada và Mỹ",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đan Mạch cảnh báo chiến tranh nếu Mỹ sáp nhập Greenland",
     "content": "Quan chức Đan Mạch cảnh báo rằng kế hoạch của Tổng thống Mỹ Donald Trump về việc sáp nhập Greenland có thể dẫn đến chiến tranh giữa Mỹ và Đan Mạch. Chủ tịch Ủy ban Quốc phòng Đan Mạch, Rasmus Jarlov, nhấn mạnh rằng ý tưởng này hoàn toàn không thể chấp nhận và chỉ có thể xảy ra nếu Mỹ xâm lược quân sự. Greenland đã thể hiện rõ ràng mong muốn duy trì quyền tự trị và không muốn trở thành một phần của Mỹ.",
     "link": "https://dantri.com.vn/the-gioi/dan-mach-canh-bao-chien-tranh-neu-my-sap-nhap-greenland-20250315074926521.htm",
@@ -600,28 +631,28 @@
     ]
   },
   {
-    "title": "Tin tức sáng 15-3: Một công ty ở TP.HCM bị phạt vì 'ém' nhiều báo cáo quan trọng",
-    "content": "Công ty cổ phần Lê Bảo Minh tại TP.HCM đã bị Ủy ban Chứng khoán Nhà nước xử phạt 92,5 triệu đồng do không công bố nhiều báo cáo tài chính quan trọng, bao gồm báo cáo tài chính quý 3-2024 và các báo cáo thường niên từ năm 2022 đến 2024. Công ty này cũng đã không công bố thông tin đúng thời hạn trên hệ thống thông tin của Ủy ban, vi phạm quy định trong lĩnh vực chứng khoán.",
-    "link": "https://tuoitre.vn/tin-tuc-sang-15-3-mot-cong-ty-o-tp-hcm-bi-phat-vi-em-nhieu-bao-cao-quan-trong-20250314192310823.htm",
-    "cat": "phap-luat",
-    "positivity": 3,
-    "importance": 6,
-    "question": "Tại sao Công ty cổ phần Lê Bảo Minh bị phạt?",
+    "title": "Trẻ em không phải cỗ máy đạt thành tích",
+    "content": "Bài viết nhấn mạnh rằng việc đặt kỳ vọng quá cao vào trẻ em trong học tập có thể dẫn đến áp lực tâm lý nghiêm trọng và ảnh hưởng đến sức khỏe tinh thần của các em. Nhiều phụ huynh mong muốn con cái đạt thành tích vượt trội, điều này vô tình tạo ra gánh nặng cho trẻ. Các chuyên gia khuyên rằng cần tạo môi trường học tập thoải mái, giúp trẻ phát triển phẩm chất và năng lực mà không bị áp lực thành tích quá lớn.",
+    "link": "https://dantri.com.vn/giao-duc/tre-em-khong-phai-co-may-dat-thanh-tich-20250314105932953.htm",
+    "cat": "giao-duc",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tại sao trẻ em không nên bị áp lực trong học tập?",
     "answers": [
       {
-        "text": "Vì không công bố nhiều báo cáo tài chính quan trọng.",
+        "text": "Vì điều này có thể gây tổn thương tâm lý cho trẻ.",
         "correct": true
       },
       {
-        "text": "Vì vi phạm quy định về an toàn lao động.",
+        "text": "Vì trẻ em cần phải thi đấu để có thành tích cao.",
         "correct": false
       },
       {
-        "text": "Vì không thực hiện nghĩa vụ thuế.",
+        "text": "Vì trẻ em nên chỉ học cho vui mà không cần kết quả.",
         "correct": false
       },
       {
-        "text": "Vì không có giấy phép kinh doanh.",
+        "text": "Vì áp lực giúp trẻ em phát triển nhanh hơn.",
         "correct": false
       }
     ]
@@ -685,28 +716,28 @@
     ]
   },
   {
-    "title": "Trẻ em không phải cỗ máy đạt thành tích",
-    "content": "Bài viết nhấn mạnh rằng việc đặt kỳ vọng quá cao vào trẻ em trong học tập có thể dẫn đến áp lực tâm lý nghiêm trọng và ảnh hưởng đến sức khỏe tinh thần của các em. Nhiều phụ huynh mong muốn con cái đạt thành tích vượt trội, điều này vô tình tạo ra gánh nặng cho trẻ. Các chuyên gia khuyên rằng cần tạo môi trường học tập thoải mái, giúp trẻ phát triển phẩm chất và năng lực mà không bị áp lực thành tích quá lớn.",
-    "link": "https://dantri.com.vn/giao-duc/tre-em-khong-phai-co-may-dat-thanh-tich-20250314105932953.htm",
-    "cat": "giao-duc",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Tại sao trẻ em không nên bị áp lực trong học tập?",
+    "title": "Tin tức sáng 15-3: Một công ty ở TP.HCM bị phạt vì 'ém' nhiều báo cáo quan trọng",
+    "content": "Công ty cổ phần Lê Bảo Minh tại TP.HCM đã bị Ủy ban Chứng khoán Nhà nước xử phạt 92,5 triệu đồng do không công bố nhiều báo cáo tài chính quan trọng, bao gồm báo cáo tài chính quý 3-2024 và các báo cáo thường niên từ năm 2022 đến 2024. Công ty này cũng đã không công bố thông tin đúng thời hạn trên hệ thống thông tin của Ủy ban, vi phạm quy định trong lĩnh vực chứng khoán.",
+    "link": "https://tuoitre.vn/tin-tuc-sang-15-3-mot-cong-ty-o-tp-hcm-bi-phat-vi-em-nhieu-bao-cao-quan-trong-20250314192310823.htm",
+    "cat": "phap-luat",
+    "positivity": 3,
+    "importance": 6,
+    "question": "Tại sao Công ty cổ phần Lê Bảo Minh bị phạt?",
     "answers": [
       {
-        "text": "Vì điều này có thể gây tổn thương tâm lý cho trẻ.",
+        "text": "Vì không công bố nhiều báo cáo tài chính quan trọng.",
         "correct": true
       },
       {
-        "text": "Vì trẻ em cần phải thi đấu để có thành tích cao.",
+        "text": "Vì vi phạm quy định về an toàn lao động.",
         "correct": false
       },
       {
-        "text": "Vì trẻ em nên chỉ học cho vui mà không cần kết quả.",
+        "text": "Vì không thực hiện nghĩa vụ thuế.",
         "correct": false
       },
       {
-        "text": "Vì áp lực giúp trẻ em phát triển nhanh hơn.",
+        "text": "Vì không có giấy phép kinh doanh.",
         "correct": false
       }
     ]
@@ -828,6 +859,33 @@
     ]
   },
   {
+    "title": "Sa bẫy mua 'thần dược' trên mạng",
+    "content": "Chị Lan đã mua loại \"thần dược\" được quảng cáo trên TikTok nhằm giúp con gái tăng cân, nhưng sau một tháng sử dụng, bé không những không tăng cân mà còn bị rối loạn nội tiết. Nhiều người khác cũng rơi vào bẫy tương tự khi sử dụng thuốc giảm cân và mỹ phẩm không rõ nguồn gốc, dẫn đến những tác hại nghiêm trọng cho sức khỏe. Bộ Y tế đã cảnh báo về tình trạng quảng cáo sai lệch và yêu cầu người dân thận trọng khi mua sản phẩm qua mạng, đồng thời đề xuất các biện pháp quản lý chặt chẽ hơn đối với việc kinh doanh thuốc trực tuyến.",
+    "link": "https://vnexpress.net/sa-bay-mua-than-duoc-tren-mang-4855106.html",
+    "cat": "suc-khoe",
+    "positivity": 2,
+    "importance": 9,
+    "question": "Tại sao nhiều người tiêu dùng lại bị lừa khi mua thuốc trên mạng?",
+    "answers": [
+      {
+        "text": "Vì quảng cáo thổi phồng công dụng của sản phẩm.",
+        "correct": true
+      },
+      {
+        "text": "Do giá sản phẩm quá cao.",
+        "correct": false
+      },
+      {
+        "text": "Vì sản phẩm có nguồn gốc xuất xứ rõ ràng.",
+        "correct": false
+      },
+      {
+        "text": "Do người tiêu dùng không quan tâm đến thông tin sản phẩm.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Phối cảnh công viên điện ảnh Thủ Thiêm ven sông Sài Gòn",
     "content": "Công viên điện ảnh Thủ Thiêm ven sông Sài Gòn sẽ bao gồm 7 khu chức năng chính, nhằm tạo nên một điểm nhấn văn hóa cho TP HCM. Các khu chức năng bao gồm phim trường, bảo tàng điện ảnh, khu thương mại và dịch vụ, cùng với sân khấu sự kiện và rạp chiếu phim ven sông. Dự án được chia thành ba giai đoạn phát triển, với mục tiêu không chỉ nâng cao trải nghiệm văn hóa cho du khách mà còn cải thiện cảnh quan khu vực ven sông.",
     "link": "https://vnexpress.net/phoi-canh-cong-vien-dien-anh-thu-thiem-ven-song-sai-gon-4861047.html",
@@ -854,33 +912,6 @@
       },
       {
         "text": "3",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Sa bẫy mua 'thần dược' trên mạng",
-    "content": "Chị Lan đã mua loại \"thần dược\" được quảng cáo trên TikTok nhằm giúp con gái tăng cân, nhưng sau một tháng sử dụng, bé không những không tăng cân mà còn bị rối loạn nội tiết. Nhiều người khác cũng rơi vào bẫy tương tự khi sử dụng thuốc giảm cân và mỹ phẩm không rõ nguồn gốc, dẫn đến những tác hại nghiêm trọng cho sức khỏe. Bộ Y tế đã cảnh báo về tình trạng quảng cáo sai lệch và yêu cầu người dân thận trọng khi mua sản phẩm qua mạng, đồng thời đề xuất các biện pháp quản lý chặt chẽ hơn đối với việc kinh doanh thuốc trực tuyến.",
-    "link": "https://vnexpress.net/sa-bay-mua-than-duoc-tren-mang-4855106.html",
-    "cat": "suc-khoe",
-    "positivity": 2,
-    "importance": 9,
-    "question": "Tại sao nhiều người tiêu dùng lại bị lừa khi mua thuốc trên mạng?",
-    "answers": [
-      {
-        "text": "Vì quảng cáo thổi phồng công dụng của sản phẩm.",
-        "correct": true
-      },
-      {
-        "text": "Do giá sản phẩm quá cao.",
-        "correct": false
-      },
-      {
-        "text": "Vì sản phẩm có nguồn gốc xuất xứ rõ ràng.",
-        "correct": false
-      },
-      {
-        "text": "Do người tiêu dùng không quan tâm đến thông tin sản phẩm.",
         "correct": false
       }
     ]
@@ -998,37 +1029,6 @@
     ]
   },
   {
-    "title": "Gần 32% lao động TP HCM tìm việc lương trên 20 triệu đồng mỗi tháng",
-    "content": "Gần 32% lao động ở TP HCM tìm kiếm việc làm với mức lương trên 20 triệu đồng mỗi tháng, trong khi chỉ khoảng 9,77% số vị trí tuyển dụng tại các doanh nghiệp đáp ứng được yêu cầu này. Theo báo cáo của UBND TP HCM, lao động có trình độ đại học trở lên chiếm gần 68% trong khi nhu cầu tuyển dụng chủ yếu tập trung vào lao động phổ thông. Điều này cho thấy sự mất cân đối giữa mong muốn của người lao động và nhu cầu thực tế của thị trường lao động tại thành phố.",
-    "link": "https://vnexpress.net/gan-32-lao-dong-tp-hcm-tim-viec-luong-tren-20-trieu-dong-moi-thang-4861495.html",
-    "cat": "kinh-doanh",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Tại TP HCM, tỷ lệ lao động tìm việc có lương trên 20 triệu đồng mỗi tháng là bao nhiêu?",
-    "answers": [
-      {
-        "text": "9,77%",
-        "correct": false
-      },
-      {
-        "text": "44,47%",
-        "correct": false
-      },
-      {
-        "text": "25,83%",
-        "correct": false
-      },
-      {
-        "text": "31,76%",
-        "correct": true
-      },
-      {
-        "text": "3,64%",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Ga T3 sẽ tiếp nhận khoảng 80% khách bay nội địa ở Tân Sơn Nhất",
     "content": "Ga T3 tại sân bay Tân Sơn Nhất sẽ tiếp nhận khoảng 80% khách bay nội địa, chủ yếu từ hai hãng hàng không Vietnam Airlines và Vietjet Air, nhằm giảm tải cho ga T1 đã quá tải nhiều năm. Dự kiến, ga T3 sẽ chính thức khai thác từ ngày 30/4/2025 sau khi tổ chức các chuyến bay thử nghiệm. Với công suất phục vụ lên tới 20 triệu khách mỗi năm, T3 sẽ nâng tổng công suất của sân bay lên 50 triệu khách mỗi năm, đồng thời cải thiện tình trạng giao thông xung quanh.",
     "link": "https://vnexpress.net/ga-t3-se-tiep-nhan-khoang-80-khach-bay-noi-dia-o-tan-son-nhat-4861482.html",
@@ -1055,6 +1055,37 @@
       },
       {
         "text": "Ngày 10/5/2025",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Gần 32% lao động TP HCM tìm việc lương trên 20 triệu đồng mỗi tháng",
+    "content": "Gần 32% lao động ở TP HCM tìm kiếm việc làm với mức lương trên 20 triệu đồng mỗi tháng, trong khi chỉ khoảng 9,77% số vị trí tuyển dụng tại các doanh nghiệp đáp ứng được yêu cầu này. Theo báo cáo của UBND TP HCM, lao động có trình độ đại học trở lên chiếm gần 68% trong khi nhu cầu tuyển dụng chủ yếu tập trung vào lao động phổ thông. Điều này cho thấy sự mất cân đối giữa mong muốn của người lao động và nhu cầu thực tế của thị trường lao động tại thành phố.",
+    "link": "https://vnexpress.net/gan-32-lao-dong-tp-hcm-tim-viec-luong-tren-20-trieu-dong-moi-thang-4861495.html",
+    "cat": "kinh-doanh",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tại TP HCM, tỷ lệ lao động tìm việc có lương trên 20 triệu đồng mỗi tháng là bao nhiêu?",
+    "answers": [
+      {
+        "text": "9,77%",
+        "correct": false
+      },
+      {
+        "text": "44,47%",
+        "correct": false
+      },
+      {
+        "text": "25,83%",
+        "correct": false
+      },
+      {
+        "text": "31,76%",
+        "correct": true
+      },
+      {
+        "text": "3,64%",
         "correct": false
       }
     ]
@@ -1531,6 +1562,33 @@
     ]
   },
   {
+    "title": "Bí quyết giúp con giỏi tiếng Anh",
+    "content": "Bài viết nhấn mạnh tầm quan trọng của việc học tiếng Anh trong thời đại ngày nay, khi mà việc thành thạo ngôn ngữ này đã trở thành điều thiết yếu cho trẻ em Việt Nam. Phụ huynh cần tạo ra môi trường học tập 100% tiếng Anh và khuyến khích trẻ giao tiếp hàng ngày để phát triển phản xạ ngôn ngữ tự nhiên. Đồng thời, phương pháp học tập chủ động như Discovery Learning cũng được khuyến khích để giúp trẻ phát triển kỹ năng sống và khả năng giao tiếp tự tin trong tương lai.",
+    "link": "https://dantri.com.vn/giao-duc/bi-quyet-giup-con-gioi-tieng-anh-20250314162050005.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Làm thế nào để giúp trẻ em giỏi tiếng Anh?",
+    "answers": [
+      {
+        "text": "Tạo môi trường học tập 100% tiếng Anh",
+        "correct": true
+      },
+      {
+        "text": "Chỉ dạy lý thuyết mà không thực hành",
+        "correct": false
+      },
+      {
+        "text": "Không khuyến khích trẻ giao tiếp",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cho trẻ xem phim tiếng Việt",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Có thể nhận biết thủy đậu trong giai đoạn ủ bệnh không?",
     "content": "Trong giai đoạn ủ bệnh của thủy đậu, từ 10-21 ngày sau khi nhiễm virus, người bệnh không có triệu chứng rõ ràng nào để nhận biết. Thời gian lây nhiễm bắt đầu từ 1-2 ngày trước khi phát ban xuất hiện. Để phòng bệnh, tiêm vaccine là biện pháp hiệu quả nhất, và có ba loại vaccine thủy đậu hiện có tại Việt Nam. Người bệnh cần chăm sóc đúng cách và theo dõi các dấu hiệu để tránh biến chứng.",
     "link": "https://vnexpress.net/co-the-nhan-biet-thuy-dau-trong-giai-doan-u-benh-khong-4861443.html",
@@ -1557,33 +1615,6 @@
       },
       {
         "text": "Có, có thể thấy triệu chứng chảy nước mũi.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bí quyết giúp con giỏi tiếng Anh",
-    "content": "Bài viết nhấn mạnh tầm quan trọng của việc học tiếng Anh trong thời đại ngày nay, khi mà việc thành thạo ngôn ngữ này đã trở thành điều thiết yếu cho trẻ em Việt Nam. Phụ huynh cần tạo ra môi trường học tập 100% tiếng Anh và khuyến khích trẻ giao tiếp hàng ngày để phát triển phản xạ ngôn ngữ tự nhiên. Đồng thời, phương pháp học tập chủ động như Discovery Learning cũng được khuyến khích để giúp trẻ phát triển kỹ năng sống và khả năng giao tiếp tự tin trong tương lai.",
-    "link": "https://dantri.com.vn/giao-duc/bi-quyet-giup-con-gioi-tieng-anh-20250314162050005.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Làm thế nào để giúp trẻ em giỏi tiếng Anh?",
-    "answers": [
-      {
-        "text": "Tạo môi trường học tập 100% tiếng Anh",
-        "correct": true
-      },
-      {
-        "text": "Chỉ dạy lý thuyết mà không thực hành",
-        "correct": false
-      },
-      {
-        "text": "Không khuyến khích trẻ giao tiếp",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cho trẻ xem phim tiếng Việt",
         "correct": false
       }
     ]
