Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,37 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Cháy tại trụ sở viễn thông, mạng Vinaphone ở Tiền Giang tê liệt",
+    "content": "Vào rạng sáng ngày 15/3, một đám cháy đã bùng phát tại trụ sở Viễn thông Tiền Giang ở TP Mỹ Tho, gây tê liệt mạng viễn thông Vinaphone trong khu vực. Lực lượng chữa cháy đã gặp khó khăn do có nhiều dây cáp và pin trong tầng hầm, nhưng đến khoảng 10h thì đám cháy đã được dập tắt. Mặc dù không có thương vong, nhưng vụ cháy đã làm mất tín hiệu dịch vụ di động, điện thoại cố định và Internet tại nhiều khu vực. VNPT đang khẩn trương khắc phục sự cố và xin lỗi khách hàng vì sự bất tiện này.",
+    "link": "https://vnexpress.net/chay-tai-tru-so-vien-thong-mang-vinaphone-o-tien-giang-te-liet-4861682.html",
+    "cat": "thoi-su",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Có sự cố gì xảy ra tại trụ sở Viễn thông Tiền Giang?",
+    "answers": [
+      {
+        "text": "Cháy tại trụ sở gây tê liệt mạng Vinaphone",
+        "correct": true
+      },
+      {
+        "text": "Có một cơn bão lớn",
+        "correct": false
+      },
+      {
+        "text": "Đã xảy ra một vụ nổ",
+        "correct": false
+      },
+      {
+        "text": "Có một cuộc đình công của công nhân",
+        "correct": false
+      },
+      {
+        "text": "Một cuộc kiểm tra an toàn đã diễn ra",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Vì sao chưa miễn nhiệm phó giám đốc nhiều lần nhận tiền nhà thầu?",
     "content": "Tỉnh ủy Đắk Lắk chưa miễn nhiệm ông Phan Xuân Bách, phó giám đốc Ban Quản lý dự án công trình giao thông, dù ông đã bị kỷ luật cảnh cáo do nhiều lần nhận tiền từ nhà thầu. Quy trình miễn nhiệm chưa được thực hiện vì tỉnh đang chờ kết quả thanh tra của Chính phủ liên quan đến một dự án khác. Ông Bách có thể vẫn tiếp tục làm việc tại Ban A và sẽ bị xử lý nếu có thêm vi phạm được phát hiện trong quá trình thanh tra.",
     "link": "https://tuoitre.vn/vi-sao-chua-mien-nhiem-pho-giam-doc-nhieu-lan-nhan-tien-nha-thau-20250315111948834.htm",
@@ -1608,6 +1639,33 @@
     ]
   },
   {
+    "title": "Sa bẫy mua 'thần dược' trên mạng",
+    "content": "Chị Lan đã mua loại \"thần dược\" được quảng cáo trên TikTok nhằm giúp con gái tăng cân, nhưng sau một tháng sử dụng, bé không những không tăng cân mà còn bị rối loạn nội tiết. Nhiều người khác cũng rơi vào bẫy tương tự khi sử dụng thuốc giảm cân và mỹ phẩm không rõ nguồn gốc, dẫn đến những tác hại nghiêm trọng cho sức khỏe. Bộ Y tế đã cảnh báo về tình trạng quảng cáo sai lệch và yêu cầu người dân thận trọng khi mua sản phẩm qua mạng, đồng thời đề xuất các biện pháp quản lý chặt chẽ hơn đối với việc kinh doanh thuốc trực tuyến.",
+    "link": "https://vnexpress.net/sa-bay-mua-than-duoc-tren-mang-4855106.html",
+    "cat": "suc-khoe",
+    "positivity": 2,
+    "importance": 9,
+    "question": "Tại sao nhiều người tiêu dùng lại bị lừa khi mua thuốc trên mạng?",
+    "answers": [
+      {
+        "text": "Vì quảng cáo thổi phồng công dụng của sản phẩm.",
+        "correct": true
+      },
+      {
+        "text": "Do giá sản phẩm quá cao.",
+        "correct": false
+      },
+      {
+        "text": "Vì sản phẩm có nguồn gốc xuất xứ rõ ràng.",
+        "correct": false
+      },
+      {
+        "text": "Do người tiêu dùng không quan tâm đến thông tin sản phẩm.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Phối cảnh công viên điện ảnh Thủ Thiêm ven sông Sài Gòn",
     "content": "Công viên điện ảnh Thủ Thiêm ven sông Sài Gòn sẽ bao gồm 7 khu chức năng chính, nhằm tạo nên một điểm nhấn văn hóa cho TP HCM. Các khu chức năng bao gồm phim trường, bảo tàng điện ảnh, khu thương mại và dịch vụ, cùng với sân khấu sự kiện và rạp chiếu phim ven sông. Dự án được chia thành ba giai đoạn phát triển, với mục tiêu không chỉ nâng cao trải nghiệm văn hóa cho du khách mà còn cải thiện cảnh quan khu vực ven sông.",
     "link": "https://vnexpress.net/phoi-canh-cong-vien-dien-anh-thu-thiem-ven-song-sai-gon-4861047.html",
@@ -1634,33 +1692,6 @@
       },
       {
         "text": "3",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Sa bẫy mua 'thần dược' trên mạng",
-    "content": "Chị Lan đã mua loại \"thần dược\" được quảng cáo trên TikTok nhằm giúp con gái tăng cân, nhưng sau một tháng sử dụng, bé không những không tăng cân mà còn bị rối loạn nội tiết. Nhiều người khác cũng rơi vào bẫy tương tự khi sử dụng thuốc giảm cân và mỹ phẩm không rõ nguồn gốc, dẫn đến những tác hại nghiêm trọng cho sức khỏe. Bộ Y tế đã cảnh báo về tình trạng quảng cáo sai lệch và yêu cầu người dân thận trọng khi mua sản phẩm qua mạng, đồng thời đề xuất các biện pháp quản lý chặt chẽ hơn đối với việc kinh doanh thuốc trực tuyến.",
-    "link": "https://vnexpress.net/sa-bay-mua-than-duoc-tren-mang-4855106.html",
-    "cat": "suc-khoe",
-    "positivity": 2,
-    "importance": 9,
-    "question": "Tại sao nhiều người tiêu dùng lại bị lừa khi mua thuốc trên mạng?",
-    "answers": [
-      {
-        "text": "Vì quảng cáo thổi phồng công dụng của sản phẩm.",
-        "correct": true
-      },
-      {
-        "text": "Do giá sản phẩm quá cao.",
-        "correct": false
-      },
-      {
-        "text": "Vì sản phẩm có nguồn gốc xuất xứ rõ ràng.",
-        "correct": false
-      },
-      {
-        "text": "Do người tiêu dùng không quan tâm đến thông tin sản phẩm.",
         "correct": false
       }
     ]
@@ -2311,6 +2342,33 @@
     ]
   },
   {
+    "title": "Bí quyết giúp con giỏi tiếng Anh",
+    "content": "Bài viết nhấn mạnh tầm quan trọng của việc học tiếng Anh trong thời đại ngày nay, khi mà việc thành thạo ngôn ngữ này đã trở thành điều thiết yếu cho trẻ em Việt Nam. Phụ huynh cần tạo ra môi trường học tập 100% tiếng Anh và khuyến khích trẻ giao tiếp hàng ngày để phát triển phản xạ ngôn ngữ tự nhiên. Đồng thời, phương pháp học tập chủ động như Discovery Learning cũng được khuyến khích để giúp trẻ phát triển kỹ năng sống và khả năng giao tiếp tự tin trong tương lai.",
+    "link": "https://dantri.com.vn/giao-duc/bi-quyet-giup-con-gioi-tieng-anh-20250314162050005.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Làm thế nào để giúp trẻ em giỏi tiếng Anh?",
+    "answers": [
+      {
+        "text": "Tạo môi trường học tập 100% tiếng Anh",
+        "correct": true
+      },
+      {
+        "text": "Chỉ dạy lý thuyết mà không thực hành",
+        "correct": false
+      },
+      {
+        "text": "Không khuyến khích trẻ giao tiếp",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cho trẻ xem phim tiếng Việt",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Techcombank dẫn dắt cuộc cách mạng tăng trưởng và đổi mới trong ngành ngân hàng",
     "content": "Techcombank đã khẳng định vị thế dẫn đầu trong ngành ngân hàng với lợi nhuận trước thuế đạt 27.500 tỷ đồng, tăng 20,3% so với năm trước. Ngân hàng này đã đầu tư mạnh vào công nghệ như trí tuệ nhân tạo và máy học, giúp tối ưu hóa dịch vụ và thu hút gần 2 triệu khách hàng mới. Techcombank tiếp tục duy trì tỉ lệ CASA cao nhất trong ngành, củng cố vị thế cạnh tranh và mở rộng nguồn thu nhập ngoài lãi.",
     "link": "https://tuoitre.vn/techcombank-dan-dat-cuoc-cach-mang-tang-truong-va-doi-moi-trong-nganh-ngan-hang-20250314192433628.htm",
@@ -2364,33 +2422,6 @@
       },
       {
         "text": "Có, có thể thấy triệu chứng chảy nước mũi.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bí quyết giúp con giỏi tiếng Anh",
-    "content": "Bài viết nhấn mạnh tầm quan trọng của việc học tiếng Anh trong thời đại ngày nay, khi mà việc thành thạo ngôn ngữ này đã trở thành điều thiết yếu cho trẻ em Việt Nam. Phụ huynh cần tạo ra môi trường học tập 100% tiếng Anh và khuyến khích trẻ giao tiếp hàng ngày để phát triển phản xạ ngôn ngữ tự nhiên. Đồng thời, phương pháp học tập chủ động như Discovery Learning cũng được khuyến khích để giúp trẻ phát triển kỹ năng sống và khả năng giao tiếp tự tin trong tương lai.",
-    "link": "https://dantri.com.vn/giao-duc/bi-quyet-giup-con-gioi-tieng-anh-20250314162050005.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Làm thế nào để giúp trẻ em giỏi tiếng Anh?",
-    "answers": [
-      {
-        "text": "Tạo môi trường học tập 100% tiếng Anh",
-        "correct": true
-      },
-      {
-        "text": "Chỉ dạy lý thuyết mà không thực hành",
-        "correct": false
-      },
-      {
-        "text": "Không khuyến khích trẻ giao tiếp",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cho trẻ xem phim tiếng Việt",
         "correct": false
       }
     ]
@@ -2547,33 +2578,6 @@
     ]
   },
   {
-    "title": "Vô sinh sau 4 lần nạo hút thai",
-    "content": "Chị Thùy, 36 tuổi, đã trải qua 4 lần nạo hút thai và gặp phải biến chứng dính lòng tử cung, dẫn đến tình trạng vô sinh. Sau khi được phẫu thuật nội soi để điều trị, chị đã có thai được 5 tuần. Các bác sĩ khuyến cáo rằng nạo hút thai có thể làm tăng nguy cơ vô sinh do tổn thương ở tử cung và hệ thống sinh sản. Phụ nữ nên đi khám định kỳ để phát hiện sớm các bất thường liên quan đến sức khỏe sinh sản.",
-    "link": "https://vnexpress.net/vo-sinh-sau-4-lan-nao-hut-thai-4861387.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Tại sao chị Thùy lại bị vô sinh?",
-    "answers": [
-      {
-        "text": "Do biến chứng dính lòng tử cung sau nhiều lần nạo hút thai",
-        "correct": true
-      },
-      {
-        "text": "Vì tuổi tác quá lớn",
-        "correct": false
-      },
-      {
-        "text": "Do không chăm sóc sức khỏe",
-        "correct": false
-      },
-      {
-        "text": "Vì không ăn uống đầy đủ",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đồng đội cũ giàu gấp bảy lần Ronaldo",
     "content": "Louis Saha, cựu cầu thủ Man Utd, đã xây dựng một sự nghiệp kinh doanh thành công với công ty AxisStars, giúp gia sản của anh tăng lên 5,6 tỷ USD, gấp bảy lần tài sản của Cristiano Ronaldo, 780 triệu USD. Saha cùng Ronaldo đã thi đấu tại Man Utd từ 2004 đến 2008 và đã giành nhiều danh hiệu. Bên cạnh đó, Saha còn nhấn mạnh tầm quan trọng của việc hỗ trợ các cựu vận động viên trong việc tìm kiếm cơ hội nghề nghiệp sau khi giải nghệ.",
     "link": "https://vnexpress.net/dong-doi-cu-giau-gap-bay-lan-ronaldo-4861379.html",
@@ -2600,6 +2604,33 @@
       },
       {
         "text": "Đầu tư vào bất động sản",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vô sinh sau 4 lần nạo hút thai",
+    "content": "Chị Thùy, 36 tuổi, đã trải qua 4 lần nạo hút thai và gặp phải biến chứng dính lòng tử cung, dẫn đến tình trạng vô sinh. Sau khi được phẫu thuật nội soi để điều trị, chị đã có thai được 5 tuần. Các bác sĩ khuyến cáo rằng nạo hút thai có thể làm tăng nguy cơ vô sinh do tổn thương ở tử cung và hệ thống sinh sản. Phụ nữ nên đi khám định kỳ để phát hiện sớm các bất thường liên quan đến sức khỏe sinh sản.",
+    "link": "https://vnexpress.net/vo-sinh-sau-4-lan-nao-hut-thai-4861387.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao chị Thùy lại bị vô sinh?",
+    "answers": [
+      {
+        "text": "Do biến chứng dính lòng tử cung sau nhiều lần nạo hút thai",
+        "correct": true
+      },
+      {
+        "text": "Vì tuổi tác quá lớn",
+        "correct": false
+      },
+      {
+        "text": "Do không chăm sóc sức khỏe",
+        "correct": false
+      },
+      {
+        "text": "Vì không ăn uống đầy đủ",
         "correct": false
       }
     ]
